--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -63,31 +63,47 @@ Feedback Thilo: weniger Small-Scale in Thesis -> mehr Meta-Level in Introduction
 TODO: This does not belong here, move it to a suitable position in the text.
 Mögliches Framing: Idee von Christoph in Introduction (3-staged model). Alternativen (dieses Kapitel) als erster Abschnitt in Fundamentals. Danach deep learning und neurocomputing ebenfalls in Fundamentals als die Building Blocks solcher Systeme.
 
-Das Ziel von AI research ist die Entwicklung einer Technologie, die uns Menschen in verschiedensten Aufgaben unterstützen kann. Zurzeit sind viele der existierenden Systeme auf einen oder wenige sehr ähnliche Tasks limitiert. Zudem gibt es Tasks welche bisher mit bestehenden Methoden nicht gelöst werden konnten (zitiere Arc). Nachfolgend werden einige alternativen Ansätze für deep networks beschrieben.
+AI research aims to develop a technology that can support humans in various tasks. However, current systems have many drawbacks and are limited to a few closely related tasks. Arguably, the only existing systems that, in non-experts' eyes, behave intelligently\sidenote{which does not mean that such systems exhibit intelligence} are foundation models such as large language models (LLMs) (cite GPT-3, GPT-4) and the subsequent fine-tuning to specific tasks (cite HFRL). However, like other deep learning models, also LLMs suffer from the typical drawbacks of statistical learning (c.f. Section). Therefore, a lot of research has been conducted to reduce these known problems: For example, current deep learning research aims to reduce hallucinations (citations), to implement an ongoing learning framework (citations, online learning), to transfer knowledge between tasks and data domains (cite transfer learning), or to learn what should be learned (cite meta-learning). However, the underlying framework remains identical: Data is statistically mapped to manually or automatically generated labels, making it difficult to solve problems such as lack of robustness,  out-of-distribution generalisation, data efficiency, causal understanding or common sense reasoning (citations). In the following, alternative approaches to training deep networks are presented that attempt to alleviate these problems with new principles that do not rely solely on label prediction or data reconstruction. 
 
-Ein aktueller Trend im Bereich deep learning ist das Training von Foundation Models (zitiere GPT-3, GPT-4) und das anschliessende fine-tuning auf spezifische Tasks (zitiere HFRL). Einige dieser Applikationen wie ChatGPT (zitiere) wirken sehr intelligent, leiden aber unter den typischen drawbacks von reinem statistischem Lernen (c.f. Section). Viel research wird unternommen, um diese well-known problems zu reduzieren, beispielsweise das Reduzieren von hallucination (Zitate), das  vortlaufende Lernen (zitiere online learning), transfer learning (zitate), oder meta-lerarning (zitate). Das darunterliegende Framework bleibt aber identisch: Daten werden mit generierten oder extrahierten Labels statistisch matched und wodurch Probleme wie fehlende robustness, generalization, data efficiency, causality understaning oder common sense reasoning nicht oder nur schwer lösbar sind (sources).
+Many approaches to building next-generation AI systems use the human brain as a source of inspiration (sources). Jeff Hawking's research group goes one step further and uses the brain as the single source of ideas and builds, following their interpretation, a system that is biologically highly plausible and implements the brain's learning algorithm. The learning algorithm is an adapted version of unsupervised Hebbian learning. Their theory is based on Vernon Mountcastle's proposal that the neocortex is made up of many cortical columns, all having a similar architecture and performing similar functions (quote from the book 1000 Brains, page 248). Thus, they argue that the brain does not comprise a single learning model like current deep learning systems but many independent models for each object (cite the papers). Each model uses different inputs from different sensory system parts. These models make predictions based on the input they receive and vote to reach a consensus on the sensory observations.
+This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning (cite), whereby, similar to random forest (cite), only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same data\sidenote{if a learning system has enough capacity, the training data can be overfitted, leading to very good results on that data}. The model, in its current form, can recognise several hundred objects and is robust to noise. A problem with the current approach is that the number of input signals severely limits the network's capacity. By adding more cortical columns (expanding the capacity in hidden layers), the model cannot scale to recognise more objects. 
 
-Viele Ansätze zur Schaffung der next-generation AI systems nutzen das menschliche Gehirn als Inspirationsquelle. Die Furschungsgruppe von Jeff Hawking geht einen Schritt weiter und nutzen das Gehirn nicht nur als Quelle für Ideen sondern bauen ein System das, gemäss ihrer Inspiration, den Lernalgorithmus des Gehirns implementiert. Ihre Theorie basiert auf dem Proposal von Vernon Mountcastle das besagt, dass der neocortex aus vielen cortical columns besteht welche alle eine similar architecture haben und similar functions ausführen (Zitiere 1000 Brains Buch Seite 248). Deshalb argumentieren sie, dass das Gehirn nicht wie deep learning systeme ein Modell bilden sondern many models of each object (Zitiere die Papers). Every model is constructed using diverse inputs, be it from slightly distinct parts of the sensor or from entirely different sensors. These models collaborate and vote collectively to establish a consensus regarding their sensory observations. Deshalb wird diese Theorie auch 1000 brains theroy genannt, da viele Modelle parallel arbeiten. Dies ist strongly related to ensemble approaches in deep learning (cite), wobei ähnlich wie bei random forrest (cite) jedem Modell nur ein Teil der Daten zugägnlich gemacht wird. Aktuell arbeitet die Firschungsgruppe von Jeff Hawkings an der Ausarbeitung und Implementierung dieser Theorie. Aktuelle Ergebnisse sind schwer interpretierbar, da sie ihr Modell auf denselben Daten trainiert und getestet haben\sidenote{bei einem Lernsystem mit genug Kapazität können so die Trainingsdaten overfitted werden, was zu sehr guten Resultaten auf diesen Daten führt}. Das Modell kann zurzeit einige hundert Objekte erkennen und ist robust gegenüber noise. Die robustness war aufgrund der vielen decoupled models intuitiv zu erwarten. Ein aktuelles Problem ist, dass die Kapazität des Netzwerks stark limitiert ist durch die Anzahl input signals und Anzahl outputs. Rein durch das Hinzufügen von weiteren columns (erweiterung der Kapazität in hidden layers) skaliert das Modell nicht zu einem vielfachen an erkennbaren Objekten.
+Strictly enforcing biological plausibility limits performance significantly, as the biologically inspired algorithm cannot fully exploit the mathematical capabilities of computational hardware. Intuitively, however, several proposed principles appear promising: \emph{sparse coding} encourages compact and efficient representation of complex data (citation), \emph{self-organisation} of a large number of parallel models increases robustness (citation), and \emph{predicting future states} allows learning in an unsupervised manner and, similar to LLM, does not restrict the objective function to specific predefined tasks.
 
-Aus einigen key components dieser theory hat sich auch eine zweite Art von Netzwerken entwickelt\sidenote{die treibende Kraft dahinter, Dileep George, arbeitete end mit Jeff Hawkings zusammen und war massgeblich an der Entwicklung von core-componetes der 1000 brains theory beteiligt}, das Recursive Cortical Network (RCN). It is based on the insight that human vision treats shape and appearance different and a known object with an unexpected colour is still easily recognisable.
-The RCN uses separate mechanisms for dealing with contours and appearances. Furthermore, they incorporates many neuroscientific principles such as lateral connections for contour consistency.
-A major advantage is that it is unsupervised, able to learn from very few examples, and has one-shot and few-shot learning capabilities. Das Prinzip scheint sehr vielversprechend, jedoch skaliert es (in der aktuellen Form) nicht zu natürlichen Bildern. Das Erstellen von Konturhierarchien scheint nur möglich, wenn das Objekt deutlich vom Hintergrund getrennt ist. Folglich hat dieses Netzwerk erst auf MNIST und text-based CAPTCHAs funktioniert.
+A second type of network that has evolved from the 1000 brains theory \sidenote{the driving force behind it, Dileep George, worked with Jeff Hawkings and was instrumental in developing the fundamentals of the 1000 brains theory} is called the recursive cortical network (RCN). It is based on the insight that human vision processes shape and appearance differently and that a familiar object with an unexpected colour can still be easily recognised.
+The RCN uses separate mechanisms for processing contours and appearances. It also incorporates many neuroscience principles, such as lateral connections for contour consistency.
+The training process is unsupervised. When the features cannot explain an image at a certain level $n$, the active features from the level below $n-1$ are combined to create a new feature at level $n$. Afterwards, features are pruned using a cost function considering both reconstruction and compression errors.
+A significant advantage of RCN is that it can learn from few examples and has one-shot and few-shot learning capabilities.
+However, in its current form, RCNs cannot be applied to natural images: The creation of contour hierarchies is possible only if the object is clearly separated from its background. Therefore, this network has only worked for MNIST and text-based CAPTCHAs so far.
 
-Andere approaches attempt to more closely mimic biological neural organization. Capsule neural network (CapsNet) modelieren explizit hierarchical relationships. Diese Netzwerke gruppiert Neuronen in "capsules" und jede capsule  represents a property, such as position, size, orientation, deformation, texture, colour, or movement. Der output from several of those capsules form more stable representations for higher capsules. Dynamic routing is used to find an agreement between bottom up activations and top down concepts ``generated'' by the available evidence over multiple iterations. CapsNets are still an active area of research, and their widespread adoption and application in real-world scenarios. Besonders das dynamic routing macht den Algorithmus langsam und bisher hat dieser approach nur auf sehr kleinen dataset wie MNIST oder CIFAR-10 funktioniert. Damit dieser Algorithmus gut skaliert, müssen spatial information (information about relative relationships between features) robuster gebildet werden können. Vorteile sind hingegen robustness to affine transformations and ability to segment with overlapping images.
+Similar to the 1000 brains theory, this model has drawbacks that prevent its practical application. At the same time, it introduces many promising concepts. The separation of shape and appearance seems promising, as this limits the feature space, and these concepts can be learned independently. This allows the model to transfer knowledge better: a fist-sized ball can be an apple, an orange or a lemon, depending on its appearance. However, the shape of these fruits only needs to be learned once. Furthermore, in the case of multiple classes, the network does not make a single prediction but creates hypotheses that are evaluated by an outer loop. This principle could serve as confidence rating or even be used in a feedback loop to decide whether an object should be analysed further to build better representations of it.
 
-Eine weitere häufig verwendetes Prinzip, das die Inspiration aus dem biologischen Kontext hat, ist die Kombination von representations mit actions. It is known from the study of animals that both eye movements and the behavioural state influence the responses of neurons in the visual cortex \sidecite{Keller_Bonhoeffer_Hübener_2012}.
-Thus, animals integrate their action (i.e., their movement) with currently incoming sensory signals to predict future sensory inputs.
-Keurti et al. \sidecite{Keurti_Pan_Besserve_Grewe_Schölkopf_2022} argue that efference copies\sidenote{The internal copy of an outflowing movement-producing signal generated by an organism's motor system is also known as efference copy.} are helpful to learn useful latent representations perceived by the visual system.
-They enforce that transformations of the real world can also be applied to latent representations, i.e. that the mental objects and the real-world objects remain consistent when similar transformations are applied to them.
-Allowing an agent to interact with the world to better understand it and to create better representations seems not only important from a neuroscientific perspective, but is also in line with theories from psychology.
-Piaget \sidecite{Piaget_1964} argues that perceiving an object is rather about understanding how it transforms and behaves and not creating a mental copy of it.
-Die Kombination von perception mit actions für autonomous machine intelligence wird auch postulated by LeCun \sidecite{LeCun_AMI}. Er schlägt das Erstellen eines world-models vor, dessen Zustand basierend auf actions vorhergesagt werden kann. Dabei hebt er die Wichtigkeit der Nutzung vonself-supervised learning hervor, beispielsweise in Kombination mit energy functions hervor.
-Die Idee, dass gute representations actionable sind, scheint vielversprechend. Aktuelle Bilddatensätze bestehen aber hauptsächlich aus 2D Bildern und nicht aus 3D Simulationen und erlauben deshalb keine actions by default. Actionable representations scheinen in einigen Bereichen wie bei der Entwicklung von autonomous agents with embodiment eine sinnvolle Idee zu sein. Computer sowie elektronische Bildsensoren (cameras) haben aber weder 3D Auflösung noch ein embodiment. Deshalb scheint fraglich, ob solche Systeme für den häufigsten use-case der Bildanalyse, nämlich für 2D Bilder oder Videos, überhaupt geeignet ist. Die Ausnutzung des sequentiellen Kontexts scheint aber äusserst hilfreich und wäre beispielsweise auch mit Videos und ohne actions möglich.
+Other approaches attempt to mimic biological neural organisation. For example, neuronal capsule networks (CapsNet) explicitly model hierarchical relationships. These networks group neurons into "capsules", and each capsule represents a property such as position, size, orientation, deformation, texture, colour or movement. The results of several of these capsules form more stable representations for higher capsules. Dynamic routing is used to match bottom-up activations and top-down concepts ``generated'' by the available evidence over multiple iterations. Thus, dynamic routing is used to learn ``viewpoint invariant'' knowledge that generalises to novel viewpoints. Furthermore, it can deal with highly overlapping objects and explain that one object is in front of another object. However, CapsNets are still an active area of research and are not yet adopted in real-world scenarios. In particular, dynamic routing makes the algorithm slow, and so far, this approach has only worked on very small datasets such as MNIST or CIFAR-10. For this algorithm to scale well, spatial information (information about relative relationships between features) needs to be able to be formed more robustly. Advantages, on the other hand, are robustness to affine transformations and the ability to segment overlapping images.
 
-Die Nutzung von energy functions scheint zum Erlernen von generelleren und robusteren AI systems vielversprechend. In the context of active inference (source), perception emerges as the process of minimizing variational free energy concerning beliefs about hidden variables. Dies erlaubt planning und reasoning durchzuführen. Beispielsweise kann dadurch ein Netzwerk einen generativen process $R(r,o)$ (when it rains $(s)$, the street gets wet $(o)$), durch prior beliefs ($p(s)$) und der beobachtete hidden states ($p(o|s)$) die probability von verschiedensten hidden states vohersagen (die Wahrscheinlichkeit, dass die Strasse wegen dem Regen Nass ist $p(s|o)$). Dieses Prinzip wird auch von anderen bekannten Forschungsgruppen wie derjenigen von Yoshua Bengio aktiv verfolgt. Ihre GFlowNets (Generative Flow Networks) erlauben to disentangle both the explanatory causal factors and the mechanisms that relate them. Dies erlaubt to deal with out-of-distribution generalization in a more rational way. Viele dieser in diesem Paragraph beschriebenen Technologien scheinen auf den ersten Blick nicht sehr relevant für das Extrahieren von Bildrepräsentationen. Eine detailierte Betrachtung zeigt aber, dass energy functions genutzt werden könnten um gegebene Bildvektoren mit Prototypvektoren abzugleichen und gleichzeitig die certainity zu bestimmen. Folglich könnte eine entsprechende Adaptierung dieses Frameworks auch für pattern recognition Vorteile bringen.
+Some concepts of CapsNets are closely related to those of RCNs. However, CapsNets have their origins in the field of computer science, while RCNs have their origins in the field of neuroscience. This is also reflected in their implementation: CapsNets are based on typical deep learning principles, while RCNs are based on highly plausible biological concepts. CapsNets divide the features into capsules which is, as for RCNs, helpful for good generalisation. In combination with dynamic routing, capsules allow the model to generalise to new, unseen viewpoints. However, a severe problem is the accumulation of spatial information. This could also be due to the fact that the model processes independent images sequentially. This problem might be alleviated if the model is adapted to either process sequentially related images or videos, or if the model can interact with objects to obtain better spatial information.
+
+Not only CapsNets try to mimic biological neural organisation but also other approaches. Researching biological neural organisation is promising as the brain is highly structured, and this structure could be the inductive bias of natural intelligence (cite Malsburg). The exact nature of the structuring is unknown, but many hypotheses were proposed and implemented as computer algorithms (citation Malsburg). Ma et al. (cited) suggest that appropriate data structuring can lead to the emergence of intelligence if it includes parsimony and self-consistency. The two principles of parsimony and self-consistency describe \emph{what} should be learned and \emph{how} it should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote(the goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way). The second principle of self-consistency states that an intelligent learning system minimises the \emph{internal} discrepancy between observed and regenerated observations. Thus, unlike an autoencoder with an encoder $E(\cdot)$ and a decoder $D(\cdot)$, it does not minimise the discrepancy between an observation $\boldsymbol{x}$ and its reconstructed version $\boldsymbol{\hat{x}} = D(E(\boldsymbol{x}))$, but their internal representations $\boldsymbol{z} = E(\boldsymbol{x})$ and $\boldsymbol{\hat{z}} = E(\boldsymbol{\hat{x}}) = E(D(E(\boldsymbol{x})))$. These representations are thus generated by self-learning through self-criticism, where the internal representations are consistent and satisfy the principle of parsimony. The described framework is very promising as it incorporates biological concepts into a framework that unifies and clarifies many practices and empirical findings of deep learning. The challenge of this framework seems to be the definition of the parsimony principles, i.e. how the latent space should be formed in detail. Recent results suggest the potential of this approach, but it is not entirely convincing, even on small datasets like CIFAR-10. For example, the framework's current implementation is inferior to simple autoencoder architectures in reconstruction or image classification.
+
+The proposed framework unifies many promising concepts within an easily implementable computational framework. Self-consistency allows to measure the discrepancy in the latent space instead of the data space. Thus, the model only has to retain relevant information and can get rid of unnecessary details while still fulfilling the principle of parsimony. Leveraging these principles seems helpful, and storing latent representations in the most compact and structured way certainly makes sense by using sparse coding. However, it is unclear how to implement this in a way that scales to large datasets. 
+
+Another frequently used principle inspired by biological learning is the combination of representations with actions. For example, it is known from animal research that both eye movements and behavioural states influence the reactions of neurons in the visual cortex {Keller_Bonhoeffer_Hübener_2012}.
+Thus, animals integrate their actions (i.e., movements) with currently incoming sensory signals.
+Keurti et al. (cite) argue that efference copies\sidenote{the internal copy of an outgoing motion-generating signal} help to learn useful latent representations of input perceived by the visual system. They allow an agent to perform actions by transforming objects and ensure that real-world transformations can also be applied to latent representations, i.e., mental objects and real-world objects remain consistent when similar transformations are applied.
+Allowing an agent to interact with the world to understand it better and create better representations seems essential not only from a neuroscientific point of view but is also in line with theories from psychology:
+Piaget\sidecite{Piaget_1964} argues that perceiving an object is more about understanding how it changes and behaves than creating a mental copy of the object.
+The combination of perception and action for autonomous machine intelligence is also postulated by LeCun \sidecite{LeCun_AMI}. He proposes creating a world model whose state can be predicted based on planned actions. He emphasises the importance of self-supervised learning in combination with energy functions.
+
+These works raise the question of what good representations are. Many deep neural networks optimise their internal representations for specific tasks such as classification or segmentation. However, a general system should have more general representations suitable for different tasks. Autoencoders, on the other hand, compress all the input data into a latent representation, retain most of the information despite its relevance, and do not distinguish between objects and backgrounds by default. Representations containing information about an object's shape and apperance from different viewpoints and knowing how the object behaves under different transformations is certainly helpful as this is a lot of useful information. However, learning actionable representation requires that this information is contained in the data source and suggests that environments based on 3D simulations are needed instead of 2D image datasets. I argue that current 2D image datasets are not enough, but 3D simulations are not needed either\sidenote{expect if an autonomous system is to be built.}. It is known from neuroscientific research that intelligent organisms cannot learn proper object representations if they only see uncorrelated images instead of a continuous input stream (cite). This seems reasonable because only a continuous input stream allows to learn the concept of changing viewpoints. However, having such a continuous stream and knowing how it changes corresponds to efference copies and render actions superfluous: A continuous video stream is like a 3D simulation where an external agent performs actions. Having a continuous input stream might be one of the main missing ingredients in current systems: The well-working LLMs are trained with a lot of temporal contexts (a sequence of words), which is omitted for visual systems trained on images (a single image). 
+
+LeCun further describes that energy functions are well suited to make such predictions of the world state based on actions because they can nicely shape the latent space due to their regulating properties.
+Using energy functions seems helpful to learn well-generalising and robust AI systems. In the context of active inference (source), perception presents itself as a process of minimising the free energy of variation with respect to beliefs about hidden variables. This enables planning and inference by modelling generative processes p(s,o). For example, if it rained at night (p(s)), one can infer that the grass is wet (p(o)). The model tries to model the chances of different hidden situations p(s|o) based on prior beliefs (p(s)) and the likelihood of what it already observed (p(o|s)). 
+Thus, active inference aims to minimise a measure called variational free energy by using past experiences to learn how the world works. This helps to predict what might happen in the future by minimising the probability of surprising or unexpected situations.
+This principle is also actively researched by other well-known research groups. For example, Bengio's research group works on GFlowNets (Generative Flow Networks), making it possible to disentangle the explanatory causal factors and the mechanisms that connect them. This allows for a more rational approach to generalisations well outside of distribution.
+
+Energy-based models can be used for generative modelling tasks. For example, they can learn to generate new samples that resemble the training data by sampling from the energy function. This allows to predict future states and to learn concepts such as viewpoint transformations in a self-supervised manner.
 
 
-TODO lese: https://arxiv.org/pdf/2207.04630.pdf
+
 
 
 
